--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -170,6 +170,12 @@
             <groupId>com.conversantmedia</groupId>
             <artifactId>disruptor</artifactId>
             <version>${oap.deps.disruptor.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
