--- a/oap-fs/pom.xml
+++ b/oap-fs/pom.xml
@@ -109,6 +109,10 @@
             <scope>test</scope>
             <exclusions>
                 <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
