--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -2,6 +2,6 @@
   profiles = [remoting, http-io]
   services {
     remoting.parameters.serialization = JSON
-    remoting-listener.parameters.private_network = true
+    remoting.parameters.private_network = true
   }
 }
