--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -381,6 +381,11 @@
             <version>5.0.0-RC5</version>
         </dependency>
         <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>0.45</version>
+        </dependency>
+        <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
             <version>${oap.deps.javax.activation.version}</version>
