--- a/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
@@ -19,6 +19,7 @@ services:
     parameters:
       port: 8980
       context: /remote/
+      serialization: DEFAULT
       kernel: "@kernel"
     supervision:
       supervise: true
