--- a/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
+++ b/oap-stdlib/src/main/resources/META-INF/oap-module.yaml
@@ -21,6 +21,7 @@ services:
       context: /remote/
       serialization: DEFAULT
       kernel: "@kernel"
+      timeout: 1m
     supervision:
       supervise: true
 
