--- a/oap-stdlib/src/test/resources/dictionary/test-dictionary-extends-ignore-duplicate.conf
+++ b/oap-stdlib/src/test/resources/dictionary/test-dictionary-extends-ignore-duplicate.conf
@@ -20,6 +20,7 @@
             {
               id = id112
               title = title112
+              type = test_old1
             }
           ]
         }
@@ -36,6 +37,7 @@
             {
               id = id112
               title = title112
+              type = test_old2
             }
           ]
         }
@@ -66,6 +68,11 @@
         {
           id = id22
           title = title21
+        }
+        {
+          id = id112
+          title = title112
+          type = test_new
         }
       ]
     }
