--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -327,7 +327,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.7.2</version>
+            <version>${oap.deps.plugins.antlr4.version}</version>
         </dependency>
 
         <dependency>
