--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>oap-alert-slack</module>
         <module>oap-zabbix</module>
         <module>oap-fs</module>
+        <module>oap-jpath</module>
         <module>maven</module>
     </modules>
 
@@ -58,7 +59,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>6.10.0</oap.project.version>
+        <oap.project.version>6.10.1</oap.project.version>
 
 
         <oap.deps.testng.version>7.1.0</oap.deps.testng.version>
@@ -108,7 +109,7 @@
         <oap.deps.maven.project.version>3.0-alpha-2</oap.deps.maven.project.version>
         <oap.deps.maven.plugin-annotations.version>3.6.0</oap.deps.maven.plugin-annotations.version>
         <oap.deps.maven.plugin-plugin.version>3.6.0</oap.deps.maven.plugin-plugin.version>
-        <oap.deps.plugins.antlr4.version>4.5.3</oap.deps.plugins.antlr4.version>
+        <oap.deps.plugins.antlr4.version>4.8-1</oap.deps.plugins.antlr4.version>
 
         <oap.deps.aws-java-sdk.version>1.11.683</oap.deps.aws-java-sdk.version>
         <oap.deps.s3mock.version>0.2.5</oap.deps.s3mock.version>
