--- a/oap-stdlib/src/test/resources/META-INF/json-ext.yaml
+++ b/oap-stdlib/src/test/resources/META-INF/json-ext.yaml
@@ -2,6 +2,10 @@ ext:
   - class: oap.json.ext.ExtDeserializerTest$Bean
     field: ext
     implementation: oap.json.ext.ExtDeserializerTest$TestExt
+  - class: oap.json.ext.ExtDeserializerTest$Bean
+    field: ext2
+    abstract: oap.json.ext.ExtDeserializerTest$Ext2
+    implementation: oap.json.ext.ExtDeserializerTest$TestExt
   - class: oap.json.ext.Npe
     field: ext
     implementation: oap.json.ext.NpeExt
