Add Ext support for template engine

--- a/oap-stdlib/src/test/resources/META-INF/json-ext.yaml
+++ b/oap-stdlib/src/test/resources/META-INF/json-ext.yaml
@@ -11,4 +11,8 @@ ext:
     implementation: oap.json.ext.NpeExt
 
 
+  - class: oap.template.TestTemplateBean
+    field: ext
+    implementation: oap.template.TestTemplateBeanExt
+
 
