--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 
     <modules>
         <module>oap-stdlib</module>
+        <module>oap-template</module>
         <module>oap-alert-slack</module>
         <module>oap-zabbix</module>
         <module>oap-fs</module>
@@ -59,7 +60,7 @@
     </repositories>
 
     <properties>
-        <oap.project.version>6.12.3</oap.project.version>
+        <oap.project.version>7.0.0</oap.project.version>
 
 
         <oap.deps.testng.version>7.1.0</oap.deps.testng.version>
