--- a/oap-template/src/test/resources/META-INF/json-ext.yaml
+++ b/oap-template/src/test/resources/META-INF/json-ext.yaml
@@ -2,3 +2,7 @@ ext:
   - class: oap.template.TestTemplateClass
     field: ext
     implementation: oap.template.TestTemplateClassExt
+  - class: oap.template.TestTemplateClass
+    field: ext2
+    abstract: oap.template.TestTemplateClass$ITestTemplateClassExt
+    implementation: oap.template.TestTemplateClassExt
