--- a/oap-stdlib/src/test/resources/META-INF/json-ext.yaml
+++ b/oap-stdlib/src/test/resources/META-INF/json-ext.yaml
@@ -11,8 +11,8 @@ ext:
     implementation: oap.json.ext.NpeExt
 
 
-  - class: oap.template.TestTemplateBean
+  - class: oap.json.TestTemplateBean
     field: ext
-    implementation: oap.template.TestTemplateBeanExt
+    implementation: oap.json.TestTemplateBeanExt
 
 
