fix: Kernel supervision

--- a/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/start_stop.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/start_stop.conf
@@ -2,11 +2,11 @@
   name = "start_stop"
   services {
     c1 {
-      implementation = "oap.application.KernelTest$TestCloseable"
+      implementation = "oap.application.KernelSupervisionTest$TestCloseable"
       supervision.supervise = true
     }
     c2 {
-      implementation = "oap.application.KernelTest$TestCloseable2"
+      implementation = "oap.application.KernelSupervisionTest$TestCloseable2"
       supervision.supervise = true
       dependsOn = [c1]
     }
