--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -433,6 +433,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.github.luben</groupId>
+            <artifactId>zstd-jni</artifactId>
+            <version>1.4.8-1</version>
+        </dependency>
     </dependencies>
 
     <build>
