--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -238,6 +238,11 @@
             <version>${oap.deps.jackson.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${oap.deps.jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${oap.deps.jackson.version}</version>
