--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -1,5 +1,5 @@
 {
-  profiles = [remoting, http-io]
+  profiles = [remoting, http]
   services {
     remoting.parameters.serialization = JSON
     remoting.parameters.private_network = true
