--- a/oap-stdlib/src/test/resources/oap/http/server/health/HealthHttpHandlerTest/application.test.conf
+++ b/oap-stdlib/src/test/resources/oap/http/server/health/HealthHttpHandlerTest/application.test.conf
@@ -1,6 +1,6 @@
 profiles = [
-  http-io
-  http-io-plain
+  http
+  http-plain
 ]
 services {
   oap-http-listener-plain.parameters.port = ${TEST_HTTP_PORT}
