kernel: check unknown services

--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/cons-field-diff-types.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/cons-field-diff-types.conf
@@ -1,4 +1,5 @@
 {
+  name = cons-field-diff-types
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$TestList"
