--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
@@ -1,4 +1,5 @@
 {
+  name = field-reference
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReference"
