--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -1,4 +1,5 @@
 {
+  name = field-references-unknown-interface 
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
