--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references.conf
@@ -1,4 +1,5 @@
 {
+  name = field-references
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
