--- a/oap-stdlib/src/test/resources/oap/application/KernelAnnotationTest/modules/servicename.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelAnnotationTest/modules/servicename.conf
@@ -1,5 +1,5 @@
 {
-  name = "servicename"
+  name = servicename
   services {
     field.implementation = "oap.application.KernelAnnotationTest$TestServiceNameField"
     setter.implementation = "oap.application.KernelAnnotationTest$TestServiceNameFSetter"
