--- a/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/cron.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/cron.conf
@@ -1,5 +1,5 @@
 {
-  name = "cron"
+  name = cron
   services {
     cron {
       implementation = "oap.application.KernelSupervisionTest$TestCron"
