--- a/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/start_stop.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/start_stop.conf
@@ -1,5 +1,5 @@
 {
-  name = "start_stop"
+  name = start_stop
   services {
     c1 {
       implementation = "oap.application.KernelSupervisionTest$TestCloseable"
