--- a/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/thread.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelSupervisionTest/modules/thread.conf
@@ -1,5 +1,5 @@
 {
-  name = "thread"
+  name = thread
   services {
     thread {
       implementation = "oap.application.KernelSupervisionTest$TestThread"
