--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/map/map.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/map/map.conf
@@ -6,9 +6,9 @@
       parameters {
         i = 1
         map {
-          test1 = "@service:s2"
-          test2 = "@service:s2"
-          test3 = "@service:s3"
+          test1 = "@service:this:s2"
+          test2 = "@service:this:s2"
+          test3 = "@service:this:s3"
         }
       }
       dependsOn = [s2, s3]
