--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -29,7 +29,7 @@
             }
           }
         }
-        complexMap = "@service:cm"
+        complexMap = "@service:this:cm"
         complexes = [{i = 2}]
       }
       dependsOn = [cm]
