--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/reference/cyclic.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/reference/cyclic.conf
@@ -1,5 +1,6 @@
 {
   name = cyclic1
+  dependsOn = [cyclic2]
   services {
     sc11 {
       implementation = oap.application.ServiceOne
@@ -8,7 +9,6 @@
         list = [
         ]
       }
-      dependsOn = [sc21]
     }
   }
 }
