--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/reference/cyclic2.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/reference/cyclic2.conf
@@ -1,5 +1,6 @@
 {
   name = cyclic2
+  dependsOn = [cyclic1]
   services {
     sc21 {
       implementation = oap.application.ServiceOne
@@ -8,7 +9,6 @@
         list = [
         ]
       }
-      dependsOn = [sc11]
     }
   }
 }
