--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -1,4 +1,5 @@
 {
+  boot.main = oap-module-with-remoting
   profiles = [remoting, http]
   services {
     remoting.parameters.serialization = JSON
