--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference-unknown-interface.conf
@@ -4,7 +4,7 @@
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReference"
       parameters {
-        ti = "@implementations:oap.application.KernelLinkImplementationsTest$TestInterface"
+        ti = "@implementations:*:oap.application.KernelLinkImplementationsTest$TestInterface"
       }
     }
   }
