--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -4,7 +4,7 @@
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
       parameters {
-        tis = ["@implementations:oap.application.KernelLinkImplementationsTest$TestInterface"]
+        tis = ["@implementations:*:oap.application.KernelLinkImplementationsTest$TestInterface"]
       }
     }
 
