--- a/oap-stdlib/src/test/resources/oap/application/ApplicationConfigurationTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/ApplicationConfigurationTest/application.conf
@@ -1,14 +1,14 @@
 {
   profiles = [profileOne]
   services {
-    ServiceTwo {
+    m1.ServiceTwo {
       parameters {
         j = ${a.b}
       }
     }
 
-    ServiceOneP1.parameters.i2 = ${one.i2}
-    ServiceOneP1.parameters.i3 = ${KEY}
+    m1.ServiceOneP1.parameters.i2 = ${one.i2}
+    m1.ServiceOneP1.parameters.i3 = ${KEY}
 
   }
 }
