--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-reference.conf
@@ -1,15 +1,17 @@
 {
   name = field-reference
+
   services {
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReference"
       parameters {
-        ti = "@implementations:*:oap.application.KernelLinkImplementationsTest$TestInterface"
+        ti = groups.field-reference.group1
       }
     }
 
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
+      group = group1
     }
   }
 }
