--- a/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelLinkImplementationsTest/field-references-unknown-interface.conf
@@ -4,12 +4,13 @@
     m {
       implementation = "oap.application.KernelLinkImplementationsTest$FieldReferences"
       parameters {
-        tis = ["@implementations:*:oap.application.KernelLinkImplementationsTest$TestInterface"]
+        tis = [groups..ti1]
       }
     }
 
     ti1 {
       implementation = "oap.application.KernelLinkImplementationsTest$TestInterfaceImpl1"
+      group = ti1
       enabled = false
     }
   }
