--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module4.yaml
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module4.yaml
@@ -23,5 +23,5 @@ services:
     name: container
     implementation: oap.application.KernelProfileTest$TestContainer
     parameters:
-      profile: "@service:this:profile"
+      profile: modules.this.profile
 
