--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/disabled/disabled.conf
@@ -6,7 +6,7 @@
       parameters {
         i = 1
         list = [
-          "@service:this:s2"
+          modules.this.s2
         ]
       }
       dependsOn = [s2]
