--- a/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/remote/RemoteTest/application.conf
@@ -2,7 +2,7 @@
   boot.main = oap-module-with-remoting
   profiles = [remoting, http]
   services {
-    remoting.parameters.serialization = JSON
-    remoting.parameters.private_network = true
+    oap.remoting.parameters.serialization = JSON
+    oap.remoting.parameters.private_network = true
   }
 }
