--- a/oap-stdlib/src/test/resources/oap/application/testng/KernelFixture/confd/fixture.yaml
+++ b/oap-stdlib/src/test/resources/oap/application/testng/KernelFixture/confd/fixture.yaml
@@ -1,4 +1,5 @@
 services:
-  fixture-service:
-    parameters:
-      value: "from fixture"
+  kernel-fixture-test:
+    fixture-service:
+      parameters:
+        value: "from fixture"
