--- a/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module6.yaml
+++ b/oap-stdlib/src/test/resources/oap/application/KernelProfileTest/module6.yaml
@@ -8,7 +8,7 @@ services:
       - run
     implementation: oap.application.KernelProfileTest$TestContainer
     parameters:
-      profile: "@service:this:profile"
+      profile: modules.this.profile
 
   profile2:
     profiles:
@@ -22,7 +22,7 @@ services:
     implementation: oap.application.KernelProfileTest$TestProfile1
     name: profile
     parameters:
-      profile1: "@service:this:profile-11"
+      profile1: modules.this.profile-11
 
   profile-11:
     implementation: oap.application.KernelProfileTest$TestProfile1
