--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/application.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/application.conf
@@ -1,15 +1,9 @@
 {
   boot.main = m3
-  
+
   profiles = [profileOne]
   services {
-    ServiceTwo {
-      parameters {
-        j = ${a.b}
-      }
-    }
-
-    ServiceOneP1.parameters.i2 = ${one.i2}
-
+    m2.ServiceTwo.parameters.j = ${a.b}
+    m1.ServiceOneP1.parameters.i2 = ${one.i2}
   }
 }
