--- a/oap-stdlib/src/test/resources/oap/application/KernelTest/modules/m1.conf
+++ b/oap-stdlib/src/test/resources/oap/application/KernelTest/modules/m1.conf
@@ -20,7 +20,7 @@
       name = ServiceOne
       parameters {
         i = 2 ms
-        kernel = "@kernel"
+        kernel = kernel.self
         complex {
           i = 2
           map = {
@@ -29,7 +29,7 @@
             }
           }
         }
-        complexMap = "@service:this:cm"
+        complexMap = modules.this.cm
         complexes = [{i = 2}]
       }
       dependsOn = [cm]
